# MemoChat

./: .clang-format  .clangd  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  _TREE.md  docker-compose.kafka.yml  docker-compose.livekit.yml  docker-compose.rabbitmq.yml  pyproject.toml  pytest.ini  requirements-dev.txt  server.crt  start_test_services.bat  stop_test_services.bat  vcpkg-configuration.json  vcpkg.json
Client/: CMakeLists.txt  config.ini  main.cpp  resources.qrc
Client/src/: AddUserItem.cpp  AddUserItem.h  ApplyFriend.cpp  ApplyFriend.h  ApplyFriendItem.cpp  ApplyFriendItem.h  ApplyFriendList.cpp  ApplyFriendList.h  ApplyFriendPage.cpp  ApplyFriendPage.h  AuthenFriend.cpp  AuthenFriend.h  BubbleFrame.cpp  BubbleFrame.h  ChatDialog.cpp  ChatDialog.h  ChatItemBase.cpp  ChatItemBase.h  ChatPage.cpp  ChatPage.h  ChatUserList.cpp  ChatUserList.h  ChatUserWid.cpp  ChatUserWid.h  ChatView.cpp  ChatView.h  ClickedBtn.cpp  ClickedBtn.h  ClickedLabel.cpp  ClickedLabel.h  ClickedOnceLabel.cpp  ClickedOnceLabel.h  ConUserItem.cpp  ConUserItem.h  ContactUserList.cpp  ContactUserList.h  CustomizeEdit.cpp  CustomizeEdit.h  FindFailDlg.cpp  FindFailDlg.h  (+34 more)
Client/style/: stylesheet.qss
Server/: CMakeLists.txt  CServer.cpp  LogicSystem.cpp  LogicSystem.h  const.h  main.cpp
Server/ChatServer/: CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MsgNode.h  UserMgr.cpp  UserMgr.h  config.ini  const.h  main.cpp
Server/GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  main.cpp
Server/StatusServer/: CMakeLists.txt  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  main.cpp
Server/VarifyServer/: config.js  config.json  email.js  message.proto  package-lock.json  package.json  redis.js  server.js
client/MemoChat/: BubbleFrame.cpp  CMakeLists.txt  ChatView.cpp  ChatView.h  MessageTextEdit.cpp  TelemetryUtils.cpp  TextBubble.cpp  applyfriend.cpp  applyfriend.h  applyfrienditem.cpp  applyfrienditem.h  applyfriendlist.cpp  applyfriendpage.cpp  authenfriend.cpp  authenfriend.h  chatdialog.cpp  chatpage.cpp  chatuserlist.cpp  chatuserwid.cpp  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.cpp  config.ini  contactuserlist.cpp  conuseritem.cpp  customizeedit.h  customizetextedit.h  findfaildlg.cpp  findsuccessdlg.cpp  friendinfopage.cpp  friendlabel.cpp  global.h  httpmgr.cpp  httpmgr.h  imagecropperlabel.cpp  loadingdlg.cpp  logindialog.cpp  main.cpp  (+21 more)
client/MemoChat-qml/: AgentController.cpp  AgentController.h  AgentMessageModel.cpp  AgentMessageModel.h  AppController.cpp  AppController.h  AppControllerGroupEvents.cpp  AppControllerMedia.cpp  AppControllerPrivateEvents.cpp  AppControllerSession.cpp  AppControllerState.cpp  AppCoordinators.cpp  AppCoordinators.h  ApplyRequestModel.cpp  ApplyRequestModel.h  AuthController.cpp  AuthController.h  CMakeLists.txt  CallSessionModel.cpp  CallSessionModel.h  ChatController.cpp  ChatController.h  ChatDispatchService.cpp  ChatDispatchService.h  ChatMessageModel.cpp  ChatMessageModel.h  ClientGateway.cpp  ClientGateway.h  ClientWinCompat.h  ContactController.cpp  ContactController.h  ConversationSyncService.cpp  ConversationSyncService.h  DialogListService.cpp  FriendListModel.cpp  FriendListModel.h  GroupChatCacheStore.cpp  GroupChatCacheStore.h  IconPathUtils.h  LivekitBridge.cpp  (+19 more)
client/MemoChatShared/: CMakeLists.txt  ChatMessageDispatcher.cpp  ChatMessageDispatcher.h  IChatTransport.h  QuicChatTransport.cpp  ScreenCaptureService.cpp  ScreenCaptureService.h  ScreenCaptureWidget.cpp  ScreenCaptureWidget.h  WebcamCaptureDialog.h  config.ini  global.cpp  global.h  httpmgr.cpp  httpmgr.h  imagecropperdialog.h  imagecropperlabel.cpp  imagecropperlabel.h  rc.qrc  singleton.h  tcpmgr.cpp  tcpmgr.h  usermgr.cpp  usermgr.h
infra/Memo_ops/: CMakeLists.txt  _TREE.md
server/: CMakeLists.txt
server/AIOrchestrator/: Dockerfile  config.py  config.yaml  docker-compose.yml  main.py  requirements.txt
server/AIServer/: AIServer.cpp  AIServiceClient.cpp  AIServiceClient.h  AIServiceCore.cpp  AIServiceCore.h  AIServiceImpl.cpp  AIServiceImpl.h  CMakeLists.txt  ConfigMgr.cpp  ConversationContext.cpp  config.ini
server/ChatServer/: AsioIOServicePool.h  AsyncEventDispatcher.cpp  AsyncEventDispatcher.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatAsyncEvent.cpp  ChatAsyncEvent.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ConfigMgr.h  (+71 more)
tests/: CMakeLists.txt  _TREE.md  test_agent_controller_boundary.py  test_app_controller_auth_boundary.py  test_app_controller_connection_boundary.py  test_avatar_upload_thread_contract.py  test_chat_history_initial_refresh.py  test_chat_shell_boundary.py  test_group_response_serialization.py  test_live2d_asset_contract.py  test_login_avatar_resource_contract.py  test_login_avatar_window.py  test_main_window_runtime_contract.py  test_media_upload_boundary.py  test_memochat_qml_core_layout.py  test_memoops_client_boundary.py  test_offline_history_bootstrap.py  test_pet_asset_settings_contract.py  test_pet_feature_flags_contract.py  test_pet_gate_boundary_contract.py  test_pet_live2d_avatar_contract.py  test_pet_privacy_ui_contract.py  test_pet_qml_contract.py  test_pet_qml_platform_contract.py  test_pet_vision_smoke_contract.py  test_pet_window_controls_contract.py  test_python_loadtest.py  test_qml_group_dialog.py  test_qml_large_pane_boundary.py  test_qml_scroll_window_handoff.py  test_status_deploy_contract.py  test_ui_startup_performance_contract.py  test_user_avatar_profile_contract.py  test_wsl_cleanup_contract.py
(+5488 files in other folders)
